[fix] increase header z-index to avoid blinking problem

--- a/front-end/src/pages/layout.scss
+++ b/front-end/src/pages/layout.scss
@@ -7,6 +7,7 @@
     display: flex;
     background-color: #fff;
     justify-content: space-between;
+    z-index: 9;
 }
 
 .menu-wrap {
